--- a/5/index.html
+++ b/5/index.html
@@ -8,43 +8,40 @@
   <base href="https://htmlacademy-htmlcss.github.io/2049649-device-34/5/">
 </head>
 <body>
-  <header class="page-header">
-    <div class="page-header-container">
+  <header class="page-header container">
+    <a class="navigation-logo" href="index.html">
+      <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
+    </a>
 
-        <a class="navigation-logo" href="index.html">
-          <img class="logo" src="images/logo-device.svg" width="145" height="37" alt="Логотип интернет-магазина «Девайс»">
-        </a>
+    <nav class="main-navigation">
+      <div class="navigation-wrapper">
+        <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="catalogue-search" class="visually-hidden" hidden>Текст поиска</label>
+          <input class="search-input" name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
+          <button class="search-button" type="submit">Найти</button>
+        </form>
+        <a class="user-menu user-login" href="#">Войти</a>
+        <a class="user-menu" href="#">Сравнить</a>
+        <a class="user-menu" href="#">Корзина</a>
+      </div>
 
-        <nav class="main-navigation">
-          <div class="navigation-wrapper">
-            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-              <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
-              <input class="search-input" name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
-              <button class="search-button" type="submit">Найти</button>
-            </form>
-            <a class="user-menu user-login" href="#">Войти</a>
-            <a class="user-menu" href="#">Сравнить</a>
-            <a class="user-menu" href="#">Корзина</a>
-          </div>
-
-        <div class="catalogue-wrapper">
-          <button class="catalogue-button" type="button">
-            <span class="catalogue-span">КАТАЛОГ ТОВАРОВ</span>
-          </button>
-          <ul class="navigation-list">
-            <li class="navigation-menu-item">
-              <a class="navigation-link" href="#">Доставка</a>
-            </li>
-            <li class="navigation-menu-item">
-              <a class="navigation-link" href="#">Гарантия</a>
-            </li>
-            <li class="navigation-menu-item">
-              <a class="navigation-link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </div>
+      <div class="catalogue-wrapper">
+        <button class="catalogue-button" type="button">
+          <span class="catalogue-span">КАТАЛОГ ТОВАРОВ</span>
+        </button>
+        <ul class="navigation-list">
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Доставка</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Гарантия</a>
+          </li>
+          <li class="navigation-menu-item">
+            <a class="navigation-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    </div>
   </header>
 
   <main class="main-index main-container">
@@ -66,10 +63,10 @@
             <img src="images/slider/quadcopter.png" width="560" height="560" alt="Квадрокоптер">
           </div>
           <div class="slider-wrapper">
-            <p class="slider-title">Порхает как бабочка, <br> жалит как пчела!<br></p>
+            <p class="slider-title main-title">Порхает как бабочка, <br> жалит как пчела!<br></p>
             <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
               замаскированным под стандартную камеру.</p>
-            <a class="button" href="#">ПОДРОБНЕЕ</a>
+            <a class="button product-button" href="#">ПОДРОБНЕЕ</a>
             <dl class="features-list">
               <dt class="features-term">Дальность полета</dt>
               <dd class="features-def">800 м</dd>
@@ -85,10 +82,10 @@
             <img src="images/slider/fitness-bracelet.png" width="560" height="560" alt="Фитнес-браслет">
           </div>
           <div class="slider-wrapper">
-            <p class="slider-title">Худеем<br>правильно!</p>
+            <p class="slider-title main-title">Худеем<br>правильно!</p>
             <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
               соблюдать диету.</p>
-            <a class="button" href="#">ПОДРОБНЕЕ</a>
+            <a class="button product-button" href="#">ПОДРОБНЕЕ</a>
             <dl class="features-list">
               <dt class="features-term">Без подзарядки</dt>
               <dd class="features-def">48 часов</dd>
@@ -102,10 +99,10 @@
             <img src="images/slider/selfie-stick.png" width="560" height="560" alt="Палка для селфи">
           </div>
           <div class="slider-wrapper">
-            <p class="slider-title">Делай селфи,<br>как Бен Стиллер! </p>
+            <p class="slider-title main-title">Делай селфи,<br>как Бен Стиллер! </p>
             <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
               метров длиной и весом всего 5 кг.</p>
-            <a class="button" href="catalog.html">ПОДРОБНЕЕ</a>
+            <a class="button product-button" href="catalog.html">ПОДРОБНЕЕ</a>
             <dl class="features-list">
               <dt class="features-term">Длина палки</dt>
               <dd class="features-def">8,5 м</dd>
@@ -136,7 +133,7 @@
         </ol>
       </section>
 
-      <section class="product-category">
+      <section class="product-category container">
         <h2 class="visually-hidden">Категории товаров магазина</h2>
         <ul class="products-list">
           <li class="products-item">
@@ -174,50 +171,42 @@
         </ul>
       </section>
 
-      <section class="advantages advantages-container">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <div class="advantages-wrapper">
-              <button class="advantages-item-button" type="button">
-                <span class="delivery-icon">Доставка</span>
-              </button>
-            </div>
-            <div class="advantages-item-wrapper">
-              <h3 class="advantages-subtitle">Доставка</h3>
+      <section class="advantages">
+        <div class="advantages-wrapper container">
+          <h2 class="visually-hidden" hidden>Преимущества</h2>
+          <div class="advantages-button-wrapper">
+            <button class="advantages-item-button" type="button">
+              <span class="delivery-icon">Доставка</span>
+            </button>
+            <button class="advantages-item-button" type="button">
+              <span class="warranty-icon">Гарантия</span>
+            </button>
+            <button class="advantages-item-button" type="button">
+              <span class="credit-icon">Кредит</span>
+            </button>
+          </div>
+
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle main-title">Доставка</h3>
               <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
                 к вашему подъезду совершенно бесплатно! Ведь
                 мы неплохо заработаем, поднимая его на ваш этаж.</p>
-            </div>
-          </li>
-
-          <li class="advantages-item">
-            <div class="advantages-wrapper">
-              <button class="advantages-item-button" type="button">
-                <span class="warranty-icon">Гарантия</span>
-              </button>
-            </div>
-            <div class="advantages-item-wrapper">
-              <h3 class="advantages-subtitle">Гарантия</h3>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle main-title">Гарантия</h3>
               <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
                 сгорит дом — не переживайте, мы выдадим вам новый.
                 Товар, не дом, конечно же.</p>
-            </div>
-          </li>
-
-          <li class="advantages-item">
-            <div class="advantages-wrapper">
-              <button class="advantages-item-button" type="button">
-                <span class="credit-icon">Кредит</span>
-              </button>
-            </div>
-            <div class="advantages-item-wrapper">
-              <h3 class="advantages-subtitle">Кредит</h3>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-subtitle main-title">Кредит</h3>
               <p class="advantages-description">Залезть в долговую яму стало проще!
-                Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-            </div>
-          </li>
-        </ul>
+                Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка,
+                разумеется.</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <div class="scarce-commodity">
@@ -226,22 +215,22 @@
 
       <div class="index-columns">
         <section class="companies">
-          <h2 class="companies-title">О нас</h2>
+          <h2 class="companies-title main-title">О нас</h2>
           <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
-            нас.<br>
-            Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+            нас.</p>
+          <p class="companies-description">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
           <ul class="companies-list">
             <li class="companies-item"><b>Меловые линии</b></li>
             <li class="companies-item"><b>СДИК</b></li>
             <li class="companies-item"><b>ТоксБерри</b></li>
           </ul>
-          <a class="button" href="#">ПОДРОБНЕЕ О НАС</a>
+          <a class="button companies-button" href="#">ПОДРОБНЕЕ О НАС</a>
         </section>
 
         <section class="contacts">
-          <h2 class="contacts-title">Контакты</h2>
-          <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.</p>
-          <p class="contacts-description">Заодно сможете проверить работоспособность покупки. </p>
+          <h2 class="contacts-title main-title">Контакты</h2>
+          <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. <br>
+            Заодно сможете проверить работоспособность покупки.</p>
           <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
           <address class="contacts-address">
             <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -257,20 +246,20 @@
       </div>
 
       <section class="newsletter">
-        <div class="newsletter-wrapper">
+        <div class="newsletter-container container">
           <h2 class="newsletter-title">Подпишитесь<br>
-              на рассылку</h2>
-        </div>
-        <div class="newsletter-description-wrapper">
+            на рассылку</h2>
           <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
-              длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-        </div>
-        <div class="newsletter-tick-wrapper">
-          <p class="newsletter-tick">Это бесплатно</p>
-          <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="email-input" type="email" name="newsletter-email" id="newsletter-mail" placeholder="Ваш e-mail">
-            <button class="email-button" type="submit">ПОДПИСАТЬСЯ</button>
-          </form>
+            длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+
+          <div class="newsletter-tick-wrapper">
+            <p class="newsletter-tick">Это бесплатно</p>
+            <form class="newsletter-subscriber" action="https://echo.htmlacademy.ru/" method="post">
+              <input class="email-input" type="email" name="newsletter-email" id="newsletter-mail"
+                     placeholder="Ваш e-mail">
+              <button class="email-button" type="submit">ПОДПИСАТЬСЯ</button>
+            </form>
+          </div>
         </div>
       </section>
     </div>
@@ -280,10 +269,9 @@
     <div class="page-footer-container">
       <div class="footer-address-wrapper">
         <img class="logo" src="images/logo-yellow.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
-        <h2 class="visually-hidden">Давайте дружить</h2>
-        <address>
-          <p class="footer-contacts-address">Санкт-Петербург, набережная<br>
-            реки Карповки, 5, литера П.</p>
+        <address class="footer-contacts-address">
+          Санкт-Петербург, набережная<br>
+            реки Карповки, 5, литера П.
         </address>
       </div>
 
