--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <a class="delivery-special-offer" href="#">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</a>
       </div>
 
-      <div class="index-columns">
+      <div class="index-columns container">
         <section class="companies">
           <h2 class="companies-title main-title">О нас</h2>
           <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
